--- a/composer.json
+++ b/composer.json
@@ -87,19 +87,22 @@
         },
         "post-install-cmd": [
             "@auto-scripts",
-            "@init-dir"
+            "@init-dir",
+            "@init-db"
         ],
         "post-update-cmd": [
             "@auto-scripts",
-            "@init-dir"
+            "@init-dir",
+            "@init-db"
         ],
         "init-dir": [
-            "mkdir -p var/cache/dev/page_xml && chmod 777 var/cache/dev/page_xml",
             "mkdir -p public/img && chmod 777 public/img",
-            "mkdir -p data && chmod 777 data",
+            "mkdir -p data && chmod 777 data"
+        ],
+        "init-db": [
             "bin/console doctrine:database:create",
             "chmod 777 data/data.db",
-            "bin/console --no-interaction doctrine:migrations:migrate -y"
+            "bin/console --no-interaction doctrine:migrations:migrate"
         ]
     },
     "conflict": {
