--- a/config/services.yaml
+++ b/config/services.yaml
@@ -28,4 +28,11 @@ services:
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+    # please note that last definitions always *replace* previous one
+
+    App\Command\EmptyCommand:
+        public: true
+
+    command.ping:
+        class: App\Command\PingCommand
+        public: true
