--- a/dockerfile/app/Dockerfile
+++ b/dockerfile/app/Dockerfile
@@ -33,6 +33,8 @@ RUN docker-php-ext-install gd
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+ apt-get install iputils-ping -y
+
 # Add user for laravel application
 #RUN groupadd -g 1000 www
 #RUN useradd -u 1000 -ms /bin/bash -g www www
