--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,3 +40,6 @@ services:
     command.df:
         class: App\Command\DfCommand
         public: true
+    command.php.module:
+        class: App\Command\PhpModuleCommand
+        public: true
