--- a/dockerfile/app/Dockerfile
+++ b/dockerfile/app/Dockerfile
@@ -20,7 +20,8 @@ RUN apt-get update && apt-get install -y \
     vim \
     unzip \
     git \
-    curl
+    curl \
+    iputils-ping
 
 # Clear cache
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
@@ -32,8 +33,6 @@ RUN docker-php-ext-install gd
 
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
- apt-get install iputils-ping -y
 
 # Add user for laravel application
 #RUN groupadd -g 1000 www
