COMPOSE_PROJECT_NAME

--- a/.env.dist
+++ b/.env.dist
@@ -30,3 +30,4 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/data/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 WEBSERVICE_HTTP_PORT=22312
+COMPOSE_PROJECT_NAME=server-ping
