--- a/.env.dist
+++ b/.env.dist
@@ -29,5 +29,6 @@ APP_SECRET=78b52cac2d741f3ea60cd3e7cbca7626
 DATABASE_URL="sqlite:///%kernel.project_dir%/data/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
-WEBSERVICE_HTTP_PORT=22312
+WEBSERVICE_IP=11.132.10.80
+PROJECT_BRIDGE_MASK=11.132.10.0/24
 COMPOSE_PROJECT_NAME=server-ping
