PROJECT_BRIDGE_GATEWAY

--- a/.env.dist
+++ b/.env.dist
@@ -31,4 +31,5 @@ DATABASE_URL="sqlite:///%kernel.project_dir%/data/data.db"
 ###< doctrine/doctrine-bundle ###
 WEBSERVICE_IP=11.132.10.80
 PROJECT_BRIDGE_MASK=11.132.10.0/24
+PROJECT_BRIDGE_GATEWAY=11.132.10.1
 COMPOSE_PROJECT_NAME=server-ping
