--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: dockerfile/app
       dockerfile: Dockerfile
-    restart: unless-stopped
+    restart: always
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
@@ -19,7 +19,7 @@ services:
     build:
       context: dockerfile/app
       dockerfile: Dockerfile
-    restart: unless-stopped
+    restart: always
     environment:
       SERVICE_NAME: app
       SERVICE_TAGS: dev
@@ -32,7 +32,7 @@ services:
   #Nginx Service
   webserver:
     image: nginx:alpine
-    restart: unless-stopped
+    restart: always
     volumes:
       - ./:/project
       - ./dockerfile/webserver/conf.d/:/etc/nginx/conf.d/
